<resources>
    <string name="app_name">Weather</string>
    <string name="hello_world">Hello World!</string>
    <string name="city">City</string>
    <string name="saint_petersburg">Saint Petersburg</string>
    <string name="moscow">Moscow</string>
    <string name="london">London</string>
    <string name="new_york">New York</string>
    <string name="text_counter">Counter</string>
    <string name="show_weather">Show weather</string>
    <string name="lastAnswer">Last Answer</string>
    <string name="back">Back</string>
    <string name="answer">Answer</string>
    <string name="temperature">Temperature</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="dialog_error_message">Connection error!</string>
    <string name="ok">Ok</string>
    <string name="history">History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Date</string>
    <string name="your_location">Your location</string>

</resources>