<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/date_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_and_padding"
            android:layout_marginTop="@dimen/margin_and_padding"
            android:text="@string/date"
            android:textSize="@dimen/sizeDetailText" />

        <TextView

            android:id="@+id/city_history"
            style="@style/textViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_and_padding"
            android:layout_marginTop="@dimen/margin_and_padding"
            android:text="@string/city"
            android:textSize="@dimen/sizeTextView" />

        <TextView
            android:id="@+id/temperature_history"
            style="@style/textViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_and_padding"
            android:layout_marginTop="@dimen/margin_and_padding"
            android:layout_marginBottom="@dimen/margin_and_padding"

            android:text="@string/temperature"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sizeTextView" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>